--- a/src/stylesheets/CalendarBox.scss
+++ b/src/stylesheets/CalendarBox.scss
@@ -4,7 +4,7 @@
 
 // 캘린더 헤더 연-월 정렬
 body{
-    font-family: 'Pretendard','Hahmlet';
+    font-family: 'Pretendard','Egyptian Slate Pro';
 }
 .yearMM{
     position: relative;
@@ -58,7 +58,7 @@ body{
         p{
         text-align: left;
         padding-left: 26px;
-        font-family: 'Pretendard','Hahmlet';
+        font-family: 'Pretendard','Egyptian Slate Pro';
        }
     }
 
@@ -110,35 +110,3 @@ body{
     
 
 }
-
-.todo-modal-dayPicker{
-    display: flex;
-    width: 300px;
-    align-items: center;
-    padding: 50px;
-    box-sizing: border-box;
-
-    #dayPicker-label{
-        font-size: 15px;
-        font-weight: 600;
-        color: $text-black;
-        font-family: 'Pretendard';
-        margin-bottom: 10px;
-    }
-
-    #dayPicker-checkbox-btn-wrap{
-              margin-bottom: 20px;
-              .dayPicker-checkbox-btn{
-            .dayPicker-checkbox{
-                margin-right: 20px;
-            }
-            span{
-                font-size: 14px;
-                color: $text-black;
-                font-family: 'Pretendard';
-            }
-         }
-    }
-
-}
-
