--- a/src/stylesheets/Nav.css
+++ b/src/stylesheets/Nav.css
@@ -63,7 +63,7 @@
 }
 
 body {
-  font-family: 'Pretendard', 'Hahmlet';
+  font-family: 'Pretendard', 'Egyptian Slate Prot';
 }
 
 body .css-1tddgg8-MuiPaper-root-MuiAppBar-root {
