--- a/src/stylesheets/Nav.scss
+++ b/src/stylesheets/Nav.scss
@@ -2,7 +2,7 @@
 @import './abstracts/variables';
 
 body{
-    font-family: 'Pretendard', 'Hahmlet';
+    font-family: 'Pretendard', 'Egyptian Slate Prot';
     .css-1tddgg8-MuiPaper-root-MuiAppBar-root{
         background: $main-navbar-gray;
         box-shadow: none;
