--- a/src/stylesheets/Feed.css
+++ b/src/stylesheets/Feed.css
@@ -64,17 +64,15 @@
 
 .feed-wrap {
   position: relative;
-  width: 100vw;
   padding: 1em;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  overflow-x: auto;
 }
 
 .feed-wrap .feed-title {
-  font-family: 'Hahmlet';
-  font-size: 2.25em;
-  font-weight: 700;
+  font-family: 'Egyptian Slate Pro';
+  font-size: 2.5em;
+  font-weight: 800;
   margin: 0;
 }
 
@@ -96,10 +94,12 @@
   width: -moz-fit-content;
   width: fit-content;
   margin: 15px 0 0 0;
+  padding: 0;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button {
   background-color: #f5f5f5;
+  border: 1px solid #f3f3f3;
   border-radius: 5px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -124,12 +124,12 @@
   margin-bottom: 12px;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button .goals-list-icon {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button .goals-list-icon {
   font-size: 1em;
   color: #1c1c1c;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button .goals-list-text {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button .goals-list-text {
   display: block;
   font-size: 13px;
   font-family: 'Pretendard';
@@ -139,7 +139,7 @@
   overflow: hidden;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button .goals-list-text p {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button .goals-list-text p {
   max-width: 200px;
   display: block;
   white-space: nowrap;
@@ -147,7 +147,7 @@
   font-weight: 900;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button .goals-list-plus-icon-wrap {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button .goals-list-plus-icon-wrap {
   background-color: #1c1c1c;
   width: 10px;
   height: 10px;
@@ -162,7 +162,7 @@
           align-items: center;
 }
 
-.feed-wrap .goals-list-wrap .goals-list-box .list-goal-button .goals-list-plus-icon-wrap .goals-list-plus-icon {
+.feed-wrap .goals-list-wrap .goals-list-box .goals-list-button .goals-list-plus-icon-wrap .goals-list-plus-icon {
   font-size: 1.4em;
   color: #ffffff;
 }
@@ -190,8 +190,37 @@
   cursor: pointer;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 850px) {
   .feed-wrap .feed-move-to-routines {
+    display: none;
+  }
+}
+
+.feed-wrap .feed-day-all-todo-edit {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60px;
+  height: 60px;
+  bottom: 21%;
+  left: 90%;
+  -webkit-box-shadow: 2px 3px 5px 0 #00000025;
+          box-shadow: 2px 3px 5px 0 #00000025;
+  border-radius: 50%;
+  border: none;
+  font-family: 'Pretendard';
+  cursor: pointer;
+}
+
+@media (max-width: 850px) {
+  .feed-wrap .feed-day-all-todo-edit {
     display: none;
   }
 }
@@ -388,7 +417,7 @@
           flex-flow: row wrap;
 }
 
-.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap button {
+.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap .feed-todo-modal-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -408,13 +437,13 @@
   cursor: pointer;
 }
 
-.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap button .feed-modal-icon {
+.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap .feed-todo-modal-icon .feed-modal-icon {
   font-family: 'Pretendard';
   color: #1c1c1c;
   font-size: 1.5em;
 }
 
-.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap button span {
+.feed-todo-modal-box .feed-todo-modal-wrap .feed-todo-modal-icon-wrap .feed-todo-modal-icon span {
   display: inline-block;
   position: absolute;
   width: 52px;
@@ -556,5 +585,287 @@
 
 .calendar-wrap .calendar-box .calendar-btn-box .calendar-ok-btn {
   margin-right: 15px;
+}
+
+.all-todo-modal-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 322px;
+  height: 275px;
+  border-radius: 8px;
+  padding: 1.5em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  font-family: 'Pretendard';
+  background-color: #ffffff;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap .all-todo-modal-head {
+  width: 250px;
+  height: 2.2em;
+  font-family: 'Pretendard';
+  font-size: 1em;
+  margin: 0 auto -5px;
+  word-wrap: break-word;
+  word-break: keep-all;
+  text-align: center;
+  text-overflow: ellipsis;
+  /* 말줄임 적용 */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap .all-todo-modal-icon-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap .all-todo-modal-icon-wrap .all-todo-modal-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #f5f5f5;
+  width: 45px;
+  height: 45px;
+  margin: 22px 21px;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap .all-todo-modal-icon-wrap .all-todo-modal-icon .feed-modal-icon {
+  font-family: 'Pretendard';
+  color: #1c1c1c;
+  font-size: 1.5em;
+}
+
+.all-todo-modal-box .all-todo-modal-wrap .all-todo-modal-icon-wrap .all-todo-modal-icon span {
+  display: inline-block;
+  position: absolute;
+  width: 65px;
+  font-size: 0.75em;
+  letter-spacing: -0.2px;
+  top: 50px;
+}
+
+.todo-modal-datePicker-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #1c1c1c;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box {
+  background: #fff;
+  border-radius: 12px;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap {
+  text-align: center;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap p {
+  font-size: 14px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker-box-title-wrap span {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 10px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 5px 5px 0 18px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div {
+  font-family: 'Pretendard';
+  font-size: 18px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(1) {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(2) {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn div:nth-child(2) :after {
+  display: inline-block;
+  content: "년";
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .css-1dozdou .css-l0iinn button {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer {
+  overflow-y: hidden;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-1n2mv2k span {
+  font-size: 13px;
+  font-family: 'Pretendard';
+  font-weight: 500;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 {
+  min-height: 260px;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r {
+  margin: 1px 0;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r div div {
+  margin: 0;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-box .todo-modal-datePicker .MuiCalendarPicker-viewTransitionContainer div .css-dhopo2 .css-i6bazn .css-mvmu1r div button {
+  font-family: 'Pretendard';
+  font-weight: 300;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap .todo-modal-datePicker-btn {
+  position: relative;
+  width: 110px;
+  height: 40px;
+  font-family: 'Pretendard';
+  font-weight: 400;
+  background: #f5f5f5;
+  border: #f3f3f3;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  color: #1c1c1c;
+  cursor: pointer;
+}
+
+.todo-modal-datePicker-wrap .todo-modal-datePicker-btn-wrap button:nth-child(1) {
+  margin-right: 25px;
+}
+
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+  border: 1px soild #f3f3f3;
+  border-radius: 50%;
+}
+
+.feed-move-to-routines {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60px;
+  height: 60px;
+  bottom: 10%;
+  left: 90%;
+  -webkit-box-shadow: 2px 3px 5px 0 #00000025;
+          box-shadow: 2px 3px 5px 0 #00000025;
+  border-radius: 50%;
+  border: none;
+  font-family: 'Pretendard';
+  cursor: pointer;
 }
 /*# sourceMappingURL=Feed.css.map */
