feat: kenna: 목표 데이터 구조 수정

--- a/src/stylesheets/Goal.scss
+++ b/src/stylesheets/Goal.scss
@@ -1,50 +1,66 @@
 @import './abstracts/variables';
 @import './abstracts/font';
 
-body{
-    font-family: 'Pretendard';
-  
-  }
-
-.goals-list-box{
-
-    position: relative;
+.goal-goals-list-wrap{
     display: flex;
     flex-flow: column nowrap;
-    width: 90%;
-    margin: 0 auto;
-    padding: 20px;
-    box-sizing: border-box;
-    font-family: inherit;
+    justify-content: flex-start;
+    padding: 35px;
 
-    .goals-list-wrap{
-        width: 100%;
-        margin: 0 auto;
-        
-        .goals-list{
+    .goals-list-box{
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        margin: 15px 0 0 0;
+        padding: 0;
 
-            width: 100%;
-            margin: 0 auto;
-            padding: 20px;
-            box-sizing: border-box;
-            justify-content: space-between;
-
-            .goals-listItem-btn{ //title 개별
-                width: fit-content;
-                justify-content:start;
-                padding: 0.4em 1em;
-                border: 1px solid $goal-btn-border-gray;
-                border-radius: 8px;
-                font-family: inherit;
-                font-weight: 900;
-                font-size: 14px;
+        .goals-list-button{
             background-color: $goal-btn-gray;
-        }
-            .goals-clickToEdit-btn{ //title 삭제
-                    font-size: 10px;
-                    color: #aaa;
+            border: 1px solid $goal-btn-border-gray;
+            border-radius: 5px;
+            width: fit-content;
+            padding: 5px 10px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            line-height: 0;
+            min-width:fit-content;
+            max-width:fit-content;
+            margin-bottom: 12px;
+
+
+            .goals-list-icon{
+                font-size: 1em;
+                color: $text-black;
             }
+
+            .goals-list-text{
+                display: block;
+                font-size: 13px;
+                font-family: 'Pretendard';
+                font-weight: 900;
+                max-width: 200px; 
+                margin: 0 10px; 
+                overflow: hidden;
+               
+                p{
+                    max-width: 200px; 
+                    display:block; 
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    font-weight: 900;
+                }
+            }
+            
+            
+        }
+        .goal-list-arrow{
+            color: $text-gray;
+            font-size: 20px;
+            font-weight: 200;
         }
 
     }
+
 }
