--- a/src/stylesheets/Goal.css
+++ b/src/stylesheets/Goal.css
@@ -62,12 +62,7 @@
   font-weight: 800;
 }
 
-body {
-  font-family: 'Pretendard';
-}
-
-.goals-list-box {
-  position: relative;
+.goal-goals-list-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,48 +70,83 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  width: 90%;
-  margin: 0 auto;
-  padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: inherit;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 35px;
 }
 
-.goals-list-box .goals-list-wrap {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.goals-list-box .goals-list-wrap .goals-list {
-  width: 100%;
-  margin: 0 auto;
-  padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.goal-goals-list-wrap .goals-list-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 15px 0 0 0;
+  padding: 0;
 }
 
-.goals-list-box .goals-list-wrap .goals-list .goals-listItem-btn {
+.goal-goals-list-wrap .goals-list-box .goals-list-button {
+  background-color: #f5f5f5;
+  border: 1px solid #f3f3f3;
+  border-radius: 5px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  padding: 5px 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: start;
-  padding: 0.4em 1em;
-  border: 1px solid #f3f3f3;
-  border-radius: 8px;
-  font-family: inherit;
-  font-weight: 900;
-  font-size: 14px;
-  background-color: #f5f5f5;
+          justify-content: flex-start;
+  line-height: 0;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin-bottom: 12px;
 }
 
-.goals-list-box .goals-list-wrap .goals-list .goals-clickToEdit-btn {
-  font-size: 10px;
-  color: #aaa;
+.goal-goals-list-wrap .goals-list-box .goals-list-button .goals-list-icon {
+  font-size: 1em;
+  color: #1c1c1c;
+}
+
+.goal-goals-list-wrap .goals-list-box .goals-list-button .goals-list-text {
+  display: block;
+  font-size: 13px;
+  font-family: 'Pretendard';
+  font-weight: 900;
+  max-width: 200px;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.goal-goals-list-wrap .goals-list-box .goals-list-button .goals-list-text p {
+  max-width: 200px;
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-weight: 900;
+}
+
+.goal-goals-list-wrap .goals-list-box .goal-list-arrow {
+  color: #afafaf;
+  font-size: 20px;
+  font-weight: 200;
 }
 /*# sourceMappingURL=Goal.css.map */
